language-server/src/tests/snapshots/gleam_language_server__tests__hover__documentation_for_shared_record_field_when_variant_is_known.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub type Wibble {\n  Wibble(\n    /// This is some documentation about the wibble field.\n    wibble: Int\n  )\n  Wobble(\n    /// This won't show up because it's a Wibble variant\n    wibble: Int\n  )\n}\n\npub fn wibble(w: Wibble) {\n  let assert Wibble(..) = w\n  w.wibble\n}\n"
---

pub type Wibble {
  Wibble(
    /// This is some documentation about the wibble field.
    wibble: Int
  )
  Wobble(
    /// This won't show up because it's a Wibble variant
    wibble: Int
  )
}

pub fn wibble(w: Wibble) {
  let assert Wibble(..) = w
  w.wibble
    ▔▔▔▔↑▔
}


----- Hover content (markdown) -----
```gleam
Int
```
 This is some documentation about the wibble field.
