language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble\nconst value = wobble.Wobble\n"
---

import wibble/wobble
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content (markdown) -----
```gleam
wobble.Wibble
```
