language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_aliased_module.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble as wubble\nconst value = wubble.Wobble\n"
---

import wibble/wobble as wubble
const value = wubble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content (markdown) -----
```gleam
wubble.Wibble
```
