language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_annotation.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble\n\nfn make_wibble() -> wobble.Wibble { wobble.Wibble }\n"
---

import wibble/wobble

fn make_wibble() -> wobble.Wibble { wobble.Wibble }
                    ▔▔▔▔▔▔▔▔↑▔▔▔▔                  


----- Hover content (markdown) -----
```gleam
wobble.Wibble
```
