language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_annotation_aliased_module.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble as wubble\n\nfn main(wibble: wubble.Wibble) {\n  wibble\n}\n"
---

import wibble/wobble as wubble

fn main(wibble: wubble.Wibble) {
                ▔▔▔▔▔▔▔↑▔▔▔▔▔   
  wibble
}


----- Hover content (markdown) -----
```gleam
wubble.Wibble
```
