language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_annotation_unqualified.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble}\n\nfn main(wibble: Wibble) {\n  wibble\n}\n"
---

import wibble/wobble.{type Wibble}

fn main(wibble: Wibble) {
                ↑▔▔▔▔▔   
  wibble
}


----- Hover content (markdown) -----
```gleam
wobble.Wibble
```
