language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_arg.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble\n\nfn do_things(wibble: wobble.Wibble) { wibble }\n"
---
import wibble/wobble

fn do_things(wibble: wobble.Wibble) { wibble }
             ↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔            


----- Hover content (markdown) -----
```gleam
Wibble
```
